@@ -13,6 +13,8 @@ Deprecated
 Features added
 --------------
 
+* C, parse array declarators with static, qualifiers, and VLA specification.
+
 Bugs fixed
 ----------
 
